fixed some layout issues, reverted back 3 commit to solve layout

--- a/rack/styles/scss/main.scss
+++ b/rack/styles/scss/main.scss
@@ -1,4 +1,5 @@
 @import "fonts";
+
 $josefin: "Josefin sans";
 $raleway: "Raleway";
 $archD: "Architects Daughter";
@@ -10,6 +11,7 @@ $black: #000;
 $sky: #E0052B;//tile#722f2f;//original-yellow#e9ffba;
 html{
    height: 100%;
+   width:100%;
    body{
       min-width: 100%;
       min-height: 100%;
@@ -62,24 +64,58 @@ html{
               }
             }
       }
-      #maincontent.contain-wrapper{
+  #maincontent.contain-wrapper{
+    float: none;
+    margin: 0px;
+    padding: 0px;
+       #intro-pic{
+          width:100%;
+          height:90%;
+        }
+       #intro{
+            margin-top: 2em;
+            //background-color: transparentize(darken($sky, 10%), 0.2);
+            text-align: center;
+            padding:1em;
+            height: 10em;
+            width: 100%;
+            height: 100%;
+            h2{
+              font-size: 4em;
+              text-transform: uppercase;
+              font-weight: 100;
+              color: $matteblack;//$white;
+              font-family: $raleway, sans-serif;
+              text-align: center;
+            }
+            #intro-text{
+              padding: 1em 15em 2em 15em;
+              font-size: 1.2em;
+              font-weight: 100;
+              text-align: justify;
+              color: $sky;
+              a{
+                font-weight: bolder;
+                color: #34c0ef;
+              }
+            }
+         }
+    .content-row{
         // get red filter background-color: transparentize($sky, 0.3);
         width: 100%;
         margin-left: 0em;
         margin-right: 0em;
         padding: 0em;
-        img{
-          width:100%;
-          height:90%;
-        }
         #info{
-          margin-top: 20em;
-          background-color: $black;
+          margin-top: 2em;
+          background-color: $white;
           text-align: right;
             //display: none;
             h1{
+              right: 3em;
+              font-family: $raleway, sans-serif;
               text-align: right;
-              color: $white;
+              color: $matteblack;
             }
          }
          #cv{
@@ -90,7 +126,7 @@ html{
           h1{
             text-align: left;
             color: lighten($sky, 20%);
-            font-family: $josefin, sans-serif;
+            font-family: $raleway, sans-serif;
             font-weight: 100;
           }
           .cv-list{
@@ -173,7 +209,7 @@ html{
             }
           }
          }
-         #portfolio{
+        #portfolio{
             margin-top: 1em;
             margin-bottom: 3em;
             width: 100%;
@@ -181,9 +217,9 @@ html{
           h1{
             text-align: center;
             color: $black;
-            font-family: $josefin, sans-serif;
+            font-family: $raleway, sans-serif;
           } 
-         .p-o-1{
+          .p-o-1{
              transform: rotate(350deg);
              text-align: center;
              font-family: $archD;
@@ -192,8 +228,8 @@ html{
           #portfolio-content{
             padding-left:5em;
             .portfolio-thumbnail{
-              height: 250px;
-              width: 220px;
+              height: 187px;
+              width: 165px;
               position:relative;
               border-top: 8px solid $white;
               border-left: 8px solid $white;
@@ -218,69 +254,29 @@ html{
             color:$matteblack;
           }
          }
-         #intro{
-            margin-top: 2em;
-            //background-color: transparentize(darken($sky, 10%), 0.2);
-            text-align: center;
-            padding:1em;
-            height: 10em;
-            width: 100%;
-            //margin-left: -59.2vw;
-            height: 100%;
-            //border: 1px solid $black;
-            //border-radius: 5%;
-            .portrait{
-               background-color: $matteblack;
-               border-radius:50%;
-               margin: 1em;
-               width: 250px;
-               height: 250px;
-               float: right;
-               transform: rotate(360deg);
-            }
-            h2{
-              font-size: 4em;
-              text-transform: uppercase;
-              font-weight: 100;
-              color: $matteblack;//$white;
-              font-family: $josefin, sans-serif;
-              text-align: center;
-            }
-            #intro-text{
-              padding: 1em 15em 2em 15em;
-              font-size: 1.2em;
-              font-weight: 100;
-              text-align: justify;
-              color: $sky;
-              a{
-                font-weight:bolder;
-                color: #34c0ef;
-              }
-            }
-         }
-         .content-row{
             .content-column{
                background-color:transparentize($white, 0.2);
                //height: 250px !important;
                margin: 1px;
                //height:50px;
             }
-         }
+   }
          //margin: 4em;
          h1{
             //background-color: transparentize(white, 0.7);
             padding: 0.7em;
             text-align: center;
             font-size: $h1_size;
-            font-family: helvetica;
+            font-family: $josefin, sans-serif;
             //color: $matteblack;
             font-weight: 100;
-            font-variant: small-caps;
             //-webkit-animation-name: fading; //Chrome, Safari, Opera
+            text-transform: uppercase;
+            -webkit-animation-name: fading; //Chrome, Safari, Opera
             //-webkit-animation-duration: 10s; // Chrome, Safari, Opera
             //animation-name: fading;
             //animation-duration: 10s;
-            }
+          }
 
             // Chrome, Safari, Opera
             @-webkit-keyframes fading {
